--- a/css/main.css
+++ b/css/main.css
@@ -47,7 +47,6 @@ header{
    justify-content: center;
    text-decoration: none;
    gap: 70px;
-   margin-top: 10px;
 }
 .button {
     display: flex;
@@ -60,7 +59,6 @@ header{
     flex-shrink: 0;
     border-radius: 10px;
     background: #6A9B96;
-    margin-top: 19px;
     color: var(--white, #FFF);
     font-size: 16px;
     font-style: normal;
@@ -117,7 +115,6 @@ button.btn.btn-light {
    font-weight: 400;
    line-height: 42px;
 }
-
 .modal-header {
    border-bottom: none;
    padding: 0 0;
@@ -129,7 +126,13 @@ button.btn.btn-light {
 }
 
 .modal-header .btn-close {
-    margin: 0 0;
+    margin:  0;
+    padding: 0;
+    width: 32px;
+    height: 32px;
+    background-size: 32px;
+    margin-top: 5px;
+
 }
 
 .modal-body {
@@ -277,8 +280,15 @@ p {
 .accordion-item:last-of-type  {
     box-shadow: none;
     border-radius: 20px 20px 20px 20px;
-    
-}   
+}
+.accordion-item:last-of-type .accordion-button.collapsed{
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+}
+.accordion-item:first-of-type{
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+}
 .footer-section {
     display: flex;
     text-align: center;
